# ShravanAI

./: .gitignore  HANDOVER_V2.md  PROJECT_CHECKPOINT.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/datasets/: kfall.yaml  (+1 more)
detection/: dataset.py  features.py  model.py  predict.py  split.py  windowing.py
digital_twin_bridge/: prediction_state.json
notebooks/: stage3_visual_qa.py
prediction/: dataset.py  features.py  labelers.py  lead_time.py  live_smoothing.py  loso.py  losses.py  torch_dataset.py  training.py  windowing.py
scripts/: analyze_temporal_errors.py  check_settling.py  curate_demo_trials.py  harmonize_dataset.py  inspect_trial_predictions.py  list_kfall_files.py  run_digital_twin_bridge.py  run_live_demo.py  train_detection_model.py  train_prediction_model.py  verify_setup.py  verify_sisfall_reader.py
shared/: config.py  manifest.py  windowing.py
tests/: test_axis_alignment.py  test_axis_alignment_group_fallback.py  test_detection_dataset.py  test_features.py  test_filtering.py  test_kfall_reader.py  test_manifest.py  test_model.py  test_orchestration.py  test_pipeline.py  test_predict.py  test_prediction_dataset.py  test_prediction_features.py  test_prediction_labelers.py  test_prediction_lead_time.py  test_prediction_loso.py  test_prediction_losses.py  test_prediction_models.py  test_prediction_torch_dataset.py  test_prediction_training.py  test_prediction_windowing.py  test_resample.py  test_sisfall_reader.py  test_split.py  test_stationarity.py  test_units.py  test_validation.py  test_windowing.py  test_writer.py
(+26 files in other folders)
